force-app/main/default/objects/Price_Request__c/Price_Request__c.object-meta.xml
<CustomObject>
    <label>Price Request</label>
    <nameField>
        <label>Price Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Price Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>