force-app/main/default/objects/Price_Request__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Price Requests (Account)</relationshipLabel>
    <relationshipName>Price_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>