force-app/main/default/objects/Price_Request__c/fields/Additional_stops__c.field-meta.xml
<CustomField>
    <fullName>Additional_stops__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Additional stops</label>
    <type>Checkbox</type>
</CustomField>