force-app/main/default/objects/Price_Request__c/fields/ADR__c.field-meta.xml
<CustomField>
    <fullName>ADR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ADR</label>
    <type>Checkbox</type>
</CustomField>