force-app/main/default/objects/Price_Request__c/fields/Contacts_emails__c.field-meta.xml
<CustomField>
    <fullName>Contacts_emails__c</fullName>
    <label>Contacts&apos; emails</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>