force-app/main/default/objects/Price_Request__c/fields/Delivery_Location__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Location</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Location__c.Type__c</field>
            <operation>equals</operation>
            <value>Delivery</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Delivery Price Requests</relationshipLabel>
    <relationshipName>Delivery_Price_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>