force-app/main/default/objects/Price_Request__c/fields/Delivery_Location_Name__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Location_Name__c</fullName>
    <formula>Delivery_Location__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Location Name</label>
    <type>Text</type>
</CustomField>