force-app/main/default/objects/Price_Request__c/fields/Direct_Ferry__c.field-meta.xml
<CustomField>
    <fullName>Direct_Ferry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Direct Ferry</label>
    <type>Checkbox</type>
</CustomField>