force-app/main/default/objects/Price_Request__c/fields/ETS__c.field-meta.xml
<CustomField>
    <fullName>ETS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ETS</label>
    <type>Checkbox</type>
</CustomField>