force-app/main/default/objects/Price_Request__c/fields/Fuel_surcharge_percentage__c.field-meta.xml
<CustomField>
    <fullName>Fuel_surcharge_percentage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fuel surcharge percentage</label>
    <type>Checkbox</type>
</CustomField>