force-app/main/default/objects/Price_Request__c/fields/Harbour_dues__c.field-meta.xml
<CustomField>
    <fullName>Harbour_dues__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Harbour dues</label>
    <type>Checkbox</type>
</CustomField>