force-app/main/default/objects/Price_Request__c/fields/Lane_Count__c.field-meta.xml
<CustomField>
    <fullName>Lane_Count__c</fullName>
    <label>Lanes</label>
    <summaryForeignKey>Lane_Price__c.Price_Request__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>