force-app/main/default/objects/Price_Request__c/fields/Loading_Location__c.field-meta.xml
<CustomField>
    <fullName>Loading_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loading Location</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Location__c.Type__c</field>
            <operation>equals</operation>
            <value>Loading</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Price Requests (Loading Location)</relationshipLabel>
    <relationshipName>Loading_Price_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>