force-app/main/default/objects/Price_Request__c/fields/Loading_Location_Name__c.field-meta.xml
<CustomField>
    <fullName>Loading_Location_Name__c</fullName>
    <formula>Loading_Location__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loading Location Name</label>
    <type>Text</type>
</CustomField>