force-app/main/default/objects/Price_Request__c/fields/Number_Of_Lanes__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Lanes__c</fullName>
    <label>Number Of Lanes</label>
    <summaryForeignKey>Lane_Price__c.Price_Request__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>