force-app/main/default/objects/Price_Request__c/fields/Overnight_charges__c.field-meta.xml
<CustomField>
    <fullName>Overnight_charges__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Overnight charges</label>
    <type>Checkbox</type>
</CustomField>