force-app/main/default/objects/Price_Request__c/fields/Pallet_exchange__c.field-meta.xml
<CustomField>
    <fullName>Pallet_exchange__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pallet exchange</label>
    <type>Checkbox</type>
</CustomField>