force-app/main/default/objects/Price_Request__c/fields/Pallet_jack__c.field-meta.xml
<CustomField>
    <fullName>Pallet_jack__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pallet jack</label>
    <type>Checkbox</type>
</CustomField>