force-app/main/default/objects/Price_Request__c/fields/Plug_in__c.field-meta.xml
<CustomField>
    <fullName>Plug_in__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Plug-in</label>
    <type>Checkbox</type>
</CustomField>