force-app/main/default/objects/Price_Request__c/fields/Request_Age_Days__c.field-meta.xml
<CustomField>
    <fullName>Request_Age_Days__c</fullName>
    <formula>TODAY() - Request_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Request Age (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>