force-app/main/default/objects/Price_Request__c/fields/Season__c.field-meta.xml
<CustomField>
    <fullName>Season__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Season</label>
    <referenceTo>Season__c</referenceTo>
    <relationshipLabel>Price Requests</relationshipLabel>
    <relationshipName>Price_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>