force-app/main/default/objects/Price_Request__c/fields/Seasonal_surcharge__c.field-meta.xml
<CustomField>
    <fullName>Seasonal_surcharge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Seasonal surcharge</label>
    <type>Checkbox</type>
</CustomField>