force-app/main/default/objects/Price_Request__c/fields/Show_Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>Show_Additional_Information__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Data In Portal</label>
    <type>Checkbox</type>
</CustomField>