force-app/main/default/objects/Price_Request__c/fields/Show_Additional_Lane_Price_Information__c.field-meta.xml
<CustomField>
    <fullName>Show_Additional_Lane_Price_Information__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show Additional Lane Price Information</label>
    <type>Checkbox</type>
</CustomField>