force-app/main/default/objects/Price_Request__c/fields/Tail_lift__c.field-meta.xml
<CustomField>
    <fullName>Tail_lift__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tail lift</label>
    <type>Checkbox</type>
</CustomField>