force-app/main/default/objects/Price_Request__c/fields/Two_drivers__c.field-meta.xml
<CustomField>
    <fullName>Two_drivers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Two drivers</label>
    <type>Checkbox</type>
</CustomField>