force-app/main/default/objects/Price_Request__c/fields/Type_of_trailer__c.field-meta.xml
<CustomField>
    <fullName>Type_of_trailer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Type of trailer</label>
    <type>Checkbox</type>
</CustomField>