force-app/main/default/objects/Price_Request__c/fields/Volume__c.field-meta.xml
<CustomField>
    <fullName>Volume__c</fullName>
    <description>Freight volume</description>
    <label>Volume</label>
    <length>255</length>
    <type>Text</type>
</CustomField>