force-app/main/default/objects/Price_Request__c/fields/Waiting_hours__c.field-meta.xml
<CustomField>
    <fullName>Waiting_hours__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Waiting hours</label>
    <type>Checkbox</type>
</CustomField>