force-app/main/default/objects/Price_Request__c/fields/Weekend_charges__c.field-meta.xml
<CustomField>
    <fullName>Weekend_charges__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Weekend charges</label>
    <type>Checkbox</type>
</CustomField>