force-app/main/default/objects/Price_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Number_Of_Lanes__c</columns>
    <columns>Request_Date__c</columns>
    <columns>Request_Age_Days__c</columns>
    <columns>Portal_URL__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>