force-app/main/default/objects/Price_Request__c/listViews/Price_Requests.listView-meta.xml
<ListView>
    <fullName>Price_Requests</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Number_Of_Lanes__c</columns>
    <columns>Request_Date__c</columns>
    <columns>Request_Age_Days__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Price Requests</label>
</ListView>