force-app/main/default/objects/Price_Request__c/listViews/SpotPriceRequests.listView-meta.xml
<ListView>
    <fullName>SpotPriceRequests</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Number_Of_Lanes__c</columns>
    <columns>Request_Age_Days__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Spot</value>
    </filters>
    <label>Spot Price Requests</label>
</ListView>